# pqc-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: README.md  run_benchmark.py
examples/: requirements.txt  vulnerable_sample.py
pqc_scanner/: __init__.py  __main__.py  ast_engine.py  cbom.py  core.py  dependencies.py
pqc_scanner/interfaces/: __init__.py
skill/pqc-audit/: SKILL.md
src/pqc_scanner/: __init__.py  core.py  findings.py  rules.py  version.py
src/pqc_scanner/detectors/: __init__.py  ast_engine.py  dependencies.py  discovery.py
src/pqc_scanner/interfaces/: cli.py  mcp_server.py
src/pqc_scanner/knowledge/: __init__.py  code.py  dependencies.py  targets.py
src/pqc_scanner/outputs/: __init__.py  cbom.py  document.py  report.py
tests/: test_ast_engine.py  test_cbom.py  test_cli.py  test_dependencies.py  test_discovery.py  test_document.py  test_mcp.py  test_report.py  test_smoke.py
